src/main/java/com/example/citronix/web/errors/RecoltesDetailsUndefinedException.java
package com.example.citronix.web.errors;

public class RecoltesDetailsUndefinedException extends RuntimeException{
    public RecoltesDetailsUndefinedException(String message){
        super(message);
    }
}
